# LithOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ExampleConfigs/: Base.yaml  KDE.yaml  Partitions.yaml  System.yaml
system/: CMakeLists.txt
system/include/: Init.hpp  PosixSignals.hpp  Utils.hpp
system/include/ALPM/: ALPM.hpp  Config.hpp  Database.hpp  Dependency.hpp  Events.hpp  File.hpp  Package.hpp  Signature.hpp  Transaction.hpp
system/include/Event/: Event.hpp
system/include/Status/: Status.hpp  Task.hpp
system/include/configs/: DiskConfiguration.hpp  SystemConfiguration.hpp
system/src/: CMakeLists.txt  Init.cpp  PosixSignals.cpp  main.cpp
system/src/ALPM/: ALPM.cpp  CMakeLists.txt  Config.cpp  Database.cpp  Dependency.cpp  Events.cpp  File.cpp  Package.cpp  Signature.cpp  Transaction.cpp
system/src/Event/: CMakeLists.txt
system/src/Status/: CMakeLists.txt  Status.cpp  Task.cpp
system/src/configs/: CMakeLists.txt  DiskConfiguration.cpp  SystemConfiguration.cpp
